<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Crime Report</string>
    <string name="crime_category_1">Кража</string>
    <string name="crime_category_2">Убийство</string>
    <string name="crime_category_3">Вымагательство</string>
    <string name="crime_category_4">Автоугон</string>
    <string name="crime_category_5">Изнасилование</string>
    <string name="crime_category_6">ДТП</string>
    <string name="crime_category_7">Другое</string>
    <string name="read_more"><u>Посмотреть на карте</u></string>
    <string name="crime_report">Crime Report</string>
    <string name="action_about">About APP</string>
    <string name="add_report">Add Report</string>
    <string name="crime_details">Crime Details</string>
    <string name="add_comment">Add Comment</string>
    <string name="reload_crimes">Reload</string>
    <string name="reload_comments">Reload</string>
    <string name="name">Name: </string>
    <string name="police_report">Обращались в полицию</string>
    <string name="comments">Коментарии</string>
    <string name="no_comments">Комментарии отсутствуют</string>
    <string name="cancel">Отменить</string>
    <string name="next">Продолжить</string>
    <string name="back">Назад</string>
    <string name="send">Отправить</string>
    <string name="allCrimes">Crimes</string>
    <string name="map">Map</string>
    <string name="internet_not_available">No internet access</string>
    <string name="add_comment_neg_but">Close</string>
    <string name="add_comment_pos_but">Comment</string>
    <string name="add_comment_title">New Comment</string>
    <string name="add_comment_name">Your name</string>
    <string name="add_comment_text">Your comment</string>
    <string name="title_activity_activity_add_crime">Сообщить</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="description">Подробное описание</string>
    <string name="category">Тип проишествия</string>
    <string name="date">Дата</string>
    <string name="time">Время</string>

</resources>
