<ScrollView
    android:paddingTop="50dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.erzhan.crimereport.fragments.FragmentAddCrime"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp"
        >
        <LinearLayout
            android:layout_margin="@dimen/padding_add_comment_conts"
            android:background="@android:color/darker_gray"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:paddingLeft="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/desc"
                />
            </LinearLayout>
            <LinearLayout
                android:layout_margin="@dimen/padding_add_comment_conts"
                android:background="@android:color/darker_gray"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <TextView
                    android:paddingLeft="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/category"
                    />
                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/cat"
                    ></Spinner>
            </LinearLayout>
            <LinearLayout
                android:layout_margin="@dimen/padding_add_comment_conts"
                android:background="@android:color/darker_gray"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:paddingLeft="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/police_report"
                    />
                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/p_report"
                    />
                </LinearLayout>
            <LinearLayout
                android:layout_margin="@dimen/padding_add_comment_conts"
                android:background="@android:color/darker_gray"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <TextView
                    android:paddingLeft="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    />
                <DatePicker
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:calendarViewShown="false"
                    android:id="@+id/date"
                    ></DatePicker>
                </LinearLayout>
            <LinearLayout
                android:layout_margin="@dimen/padding_add_comment_conts"
                android:background="@android:color/darker_gray"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:paddingLeft="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time"
                    />
                <TimePicker
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/time"
                    ></TimePicker>
                </LinearLayout>
    </LinearLayout>
</ScrollView>
