<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.erzhan.crimereport.activities.ActivityCrime"
    android:orientation="vertical"
    >
    <include layout="@layout/row_crime_and_date_time"></include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/common_signin_btn_dark_text_disabled">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textSize="@dimen/text_description_size"
                    android:id="@+id/crime_description"
                    android:text="В бишкеке на улице советская произошло убийство"
                    />

                <CheckedTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/police_report"
                    android:id="@+id/police_report"
                    android:checked="true"
                    android:textSize="@dimen/text_police_report_size"
                    android:checkMark="?android:attr/listChoiceIndicatorMultiple"
                    android:clickable="false"
                    android:gravity="center"
                    android:layout_gravity="end" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/comments"
        android:textStyle="bold"
        android:layout_margin="5dp"
        android:textSize="@dimen/text_comments_text_size"
    />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_comments"
        android:layout_margin="5dp"
        android:id="@+id/no_comments"
        android:visibility="gone"
        />
    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/comments_listView"
        android:dividerHeight="2dp"
        android:layout_weight="1"
        ></ListView>
</LinearLayout>
